# rust-htmx

./: .gitignore  Cargo.toml  README.md
src/: main.rs
templates/: base.html  contact.html  contacts.html  counter.html  formerror.html
