[package]
name = "axum-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
minijinja = { version = "2.7.0", features = ["loader", "multi_template"] }
serde = { version = "1.0.217", features = ["derive"] }
